--- a/Web.config
+++ b/Web.config
@@ -74,7 +74,7 @@
   </system.codedom>
   <connectionStrings>
 	  
-  <add name="hospital_dbEntities" connectionString="metadata=res://*/Models.DBSuper.csdl|res://*/Models.DBSuper.ssdl|res://*/Models.DBSuper.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-CCMSVUV;initial catalog=hospital_db;integrated security=True;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="hospital_dbEntities" connectionString="metadata=res://*/Models.DBSuper.csdl|res://*/Models.DBSuper.ssdl|res://*/Models.DBSuper.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=edwinramirezg\SQLEXPRESS;initial catalog=hospital_db;integrated security=True;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
